# rlbot_flatbuffers_py

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  pybench.py  pyproject.toml  pytest.py  rustfmt.toml
.github/workflows/: CI.yml
codegen/: class_inject.rs  enums.rs  generator.rs  main.rs  pyi.rs  structs.rs  unions.rs
src/: lib.rs
