[package]
name = "rlbot-flatbuffers-py"
version = "0.11.2"
edition = "2021"
description = "A Python module implemented in Rust for serializing and deserializing RLBot's flatbuffers"
repository = "https://github.com/VirxEC/rlbot_flatbuffers_py"
build = "codegen/main.rs"
license = "MIT"
readme = "README.md"
exclude = [".github", "pytest.py", "pybench.py", "rustfmt.toml", ".gitignore", ".gitmodules", "flatc_mac"]
publish = false

[lints.clippy]
all = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rlbot_flatbuffers"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = [] }
serde = "1.0.197"
flatbuffers = "24.3.25"
# get-size appears to be unmaintained but it's too useful here
# forked and updated deps
get-size = { git = "https://github.com/VirxEC/get-size", branch = "update", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
